# ce-win-file-cache

./: .clang-tidy  .gitignore  .gitmodules  ARCHITECTURE.md  ASYNC_DOWNLOAD_FLOW.md  CACHE_EVICTION_PROTECTION.md  CACHING_DESIGN.md  CLAUDE.md  CMakeLists.txt  CMakeLists.txt.original  CPPCHECK_FIXES.md  DEBUGGING.md  DYNAMIC_MEMORY_ANALYSIS.md  README.md  REMOTE_DEV_GUIDE.md  TODO.md  USE_AFTER_FREE_ANALYSIS.md  WINDOWS_CI_PLAN.md  build-macos.sh  build-msvc-env.sh  build-msvc.bat  build-msvc.sh  build-wine.sh  build-with-tests.bat  build.bat  build_and_run_security_test.bat  cl-wrapper.sh  cmake-wine.sh  compile-wine-simple.sh  compile-wine.sh  compilers.json  compilers.production.json  compilers.yaml  debug_cache_size  debug_cache_size.cpp  debug_directory_cache.cpp  debug_directory_cache_enhanced.cpp  format_code.sh  generate-vs-debug.bat  link-wrapper.sh  (+12 more)
.claude/: settings.local.json
.github/workflows/: code-quality.yml  test-windows.yml  test.yml
build-msvc/: .ninja_deps  .ninja_log  build.ninja
docs/: ARCHITECTURE.md  CPPCHECK_FIXES.md  DEBUG_FLAGS.md  FILESYSTEM_INTEGRATION_PLAN.md  INSTALLATION_AND_USAGE.md  LOGGING.md  QUERYDIRECTORY_CHANGES.md  REMOTE_DEV_GUIDE.md  SECURITY_DESCRIPTOR_DEBUGGING_LESSON.md  TESTING.md  USE_AFTER_FREE_ANALYSIS.md  WINDOWS_CI_PLAN.md  WINDOWS_FILESYSTEM_DRIVER_DEVELOPMENT.md  debug_service_startup.md  winfsp-callbacks.md
include/ce-win-file-cache/: alfaheader.h  async_download_manager.hpp  cache_manager.hpp  config_parser.hpp  directory_cache.hpp  file_access_tracker.hpp  glob_matcher.hpp  hybrid_filesystem.hpp  logger.hpp  macos_compat.hpp  memory_cache_manager.hpp  metrics_collector.hpp  network_client.hpp  prometheus_metrics_impl.hpp  security_descriptor_builder.hpp  string_utils.hpp  time_utils.hpp  windows_compat.hpp
include/compiler_cache/: alfaheader.h  cache_manager.hpp  config_parser.hpp  hybrid_filesystem.hpp  network_client.hpp  windows_compat.hpp  wine_compat.hpp
include/types/: cache_entry.hpp  config.hpp  directory_tree.hpp  file_access_info.hpp  file_state.hpp
include/wine_stubs/: devioctl.h  ntifs.h
scripts/: run-clang-tidy.sh
src/: async_download_manager.cpp  cache_demo.cpp  cache_manager.cpp  config_parser.cpp  directory_cache.cpp  directory_tree.cpp  file_access_tracker.cpp  glob_matcher.cpp  hybrid_filesystem.cpp  logger.cpp  main.cpp  memory_cache_manager.cpp  metrics_collector.cpp  network_client.cpp  prometheus_metrics_impl.cpp  real_file_cache_demo.cpp  security_descriptor_builder.cpp  string_utils.cpp  test_async_download.cpp  test_cache_main.cpp  test_config_async.cpp  test_config_threads.cpp  test_directory_cache.cpp  test_edge_cases.cpp  test_filesystem_async.cpp  test_single_thread.cpp  time_utils.cpp  wine_stubs.cpp
src/test/: CMakeLists.txt  cache_demo.cpp  glob_matcher_test.cpp  glob_test.cpp  real_file_cache_demo.cpp  test_async_download.cpp  test_cache_main.cpp  test_cache_policy.cpp  test_config_async.cpp  test_config_threads.cpp  test_directory_cache.cpp  test_edge_cases.cpp  test_file_access_tracker.cpp  test_filesystem_async.cpp  test_hybrid_filesystem_pattern_matching.cpp  test_json_config.cpp  test_metrics.cpp  test_single_thread.cpp
types/: cache_entry.hpp  config.hpp  file_state.hpp
